Refactor RESTful API
